--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -136,3 +136,67 @@
 			background-position: -640px 0
 		.eze-layout
 			background-position: -704px 0
+
+	// Small popover
+
+	.popover
+		max-height: 650px
+		width: 350px
+		-moz-animation: fade-in 0.5s ease 1 normal
+		-webkit-animation: fade-in 0.5s ease 1 normal
+
+		h1
+			font: normal 20px/20px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+			margin: 0 0 10px 0
+
+		h2
+			font: normal 16px/16px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
+			margin: 0 0 10px 0
+
+		.eze-autosave
+			position: absolute
+			top: 6px
+			right: 0
+
+
+
+
+
+
+
+
+	// Custom styles for different modals
+
+	.eze-activity-modal 
+		.btn-group
+			margin: 0 0 10px 0
+
+	.eze-devices-modal
+		.table
+			margin: 0
+
+			tr:first-child td
+				border-top: 0
+
+			td
+				padding: 8px 8px 8px 0
+
+			p, label
+				margin: 4px 0 0 0
+
+	.eze-publish-modal
+		.publish-info
+			font-size: 11px
+			margin: -5px 0 5px 0
+			
+		label.checkbox
+			margin: 0 0 5px 2px
+
+	.eze-add-content-modal
+		width: 580px
+
+	.eze-dashboard-modal
+		width: 580px
+
+		form
+			margin: 0
