--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -140,10 +140,17 @@
 	// Small popover
 
 	.popover
+		border-color: #fff
+		box-shadow: 0 0px 5px rgba(0, 0, 0, 0.5)
 		max-height: 650px
+		border-radius: 4px
 		width: 350px
+		background: #fafafa
 		-moz-animation: fade-in 0.5s ease 1 normal
 		-webkit-animation: fade-in 0.5s ease 1 normal
+
+		&.right .arrow
+			left: -11px
 
 		h1
 			font: normal 20px/20px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
@@ -193,7 +200,7 @@
 			margin: 0 0 5px 2px
 
 	.eze-add-content-modal
-		width: 580px
+		width: 605px
 
 	.eze-dashboard-modal
 		width: 580px
