--- a/css/ie-legacy.css
+++ b/css/ie-legacy.css
@@ -3,8 +3,8 @@
 
 /* IE doesnt support box-shadow, and filters is to cpu intensive */
 
-.eze .eze-smallmodal { border: 2px solid #555!important;}
-	.eze .eze-smallmodal .arrow { color: #555!important;}
+.eze .popover { border: 2px solid #555!important;}
+	.eze .popover.right .arrow { border-right-color: #555!important;}
 
 .eze .eze-comments li .add-comment .btn { top: 1px!important; }
 
