--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -137,3 +137,28 @@
 
 	section ul li::before, footer ul li::before, section ol li::before, footer ol li::before
 		display: none
+	
+	.container
+		width: auto
+	
+	input, textarea, select
+		height: auto
+	
+	label
+		display: inline
+
+	li
+		line-height: normal
+		position: static
+
+		&:before
+			content: normal
+	
+	h1, h2, h3, h4, h5, h6
+		color: #000
+		
+		small
+			color: #000
+	
+	.comment
+		min-height: 10px
