--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -22,6 +22,7 @@
 
 				input
 					margin: -1px 5px 0 0
+					display: inline
 
 				h1
 					font: normal 16px/16px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
