--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -133,6 +133,9 @@
                             width: 100%
                             font: normal 12px/22px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 
+                            img
+                                margin-top: -2px
+
                             .other-locations
                                 border-bottom: 1px dashed #000
 
