--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -152,6 +152,9 @@
 		&.right .arrow
 			left: -11px
 
+		.popover-title
+			background: #fff
+
 		h1
 			font: normal 20px/20px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
 			margin: 0 0 10px 0
@@ -167,16 +170,14 @@
 
 
 
-
-
-
-
-
 	// Custom styles for different modals
 
 	.eze-activity-modal 
 		.btn-group
 			margin: 0 0 10px 0
+
+		.show-more
+			margin: 10px 0 0 0
 
 	.eze-devices-modal
 		.table
