--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -131,6 +131,10 @@
 			border-color: #91C90A
 
 	// Fixes for ezexceed demo design general styles
+
+	.input-prepend .add-on, .input-append .add-on
+		color: #333
+
 	header
 		min-height: 0
 		background: cyan
@@ -143,9 +147,6 @@
 	
 	input, textarea, select
 		height: auto
-	
-	label
-		display: inline
 
 	li
 		line-height: normal
