--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -129,6 +129,7 @@
                         h2
                             font: normal 18px/18px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
                             margin: 10px 0 8px 0
+                            display: inline-block
                         p
                             width: 100%
                             font: normal 12px/22px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
