--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -180,6 +180,7 @@
 			margin: 10px 0 0 0
 
 	.eze-devices-modal
+		width: 420px
 		.table
 			margin: 0
 
@@ -191,6 +192,13 @@
 
 			p, label
 				margin: 4px 0 0 0
+
+			p
+				width: 150px
+				display: block
+				overflow: hidden
+				text-overflow: ellipsis
+				white-space: nowrap
 
 	.eze-publish-modal
 		.publish-info
