Updated activity css and markup

--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -271,8 +271,12 @@
 			p
 				font: normal 11px/16px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
 
-		.eze-comments li:last-child
-			border-bottom: 0
+		.eze-comments
+			background: #fafafa
+			border: 1px solid #ccc
+
+			li:last-child
+				border-bottom: 0
 
 				
 
