--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -179,6 +179,10 @@
 		.show-more
 			margin: 10px 0 0 0
 
+		.eze-comments
+			background: #fff
+			border: 1px solid #ccc
+
 	.eze-devices-modal
 		width: 420px
 		.table
