--- a/css/eze.css
+++ b/css/eze.css
@@ -322,6 +322,9 @@
   margin: 0 0 10px 0; }
 .eze .eze-activity-modal .show-more {
   margin: 10px 0 0 0; }
+.eze .eze-activity-modal .eze-comments {
+  background: white;
+  border: 1px solid #cccccc; }
 .eze .eze-devices-modal {
   width: 420px; }
   .eze .eze-devices-modal .table {
@@ -870,7 +873,12 @@
       background: white; }
 .eze .eze-comments {
   list-style: none;
-  margin: 0 0 10px 0; }
+  margin: 0 0 10px 0;
+  max-height: 400px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  padding: 0 10px;
+  border-radius: 4px; }
   .eze .eze-comments li {
     border-top: 1px solid white;
     border-bottom: 1px solid #dcdcdc;
@@ -895,6 +903,17 @@
         .eze .eze-comments li p.post-actions a {
           color: #d67f00;
           text-decoration: underline; }
+    .eze .eze-comments li .eze-replies {
+      list-style: none;
+      margin: 0; }
+      .eze .eze-comments li .eze-replies li {
+        padding: 0;
+        margin: 10px 0 0 10px;
+        border: 0; }
+        .eze .eze-comments li .eze-replies li .post-actions {
+          margin: 0 0 0 40px; }
+        .eze .eze-comments li .eze-replies li:last-child .post-actions {
+          margin-bottom: -18px; }
     .eze .eze-comments li .add-comment-button {
       float: right; }
     .eze .eze-comments li .add-comment {
@@ -1301,8 +1320,11 @@
       margin-bottom: 0; }
     .eze .eze-object-sidebar .eze-container p {
       font: normal 11px/16px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif; }
-  .eze .eze-object-sidebar .eze-comments li:last-child {
-    border-bottom: 0; }
+  .eze .eze-object-sidebar .eze-comments {
+    background: #fafafa;
+    border: 1px solid #cccccc; }
+    .eze .eze-object-sidebar .eze-comments li:last-child {
+      border-bottom: 0; }
 
 .eze .eze-layout .active-layout {
   border: 3px solid orange; }
