--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -177,6 +177,11 @@
 	.eze-comments
 		list-style: none
 		margin: 0 0 10px 0
+		max-height: 400px
+		overflow-x: hidden
+		overflow-y: auto
+		padding: 0 10px
+		border-radius: 4px
 
 		li
 			border-top: 1px solid #fff
@@ -207,6 +212,21 @@
 					a
 						color: #D67F00
 						text-decoration: underline
+
+			.eze-replies // Comments on a post
+				list-style: none
+				margin: 0
+
+				li
+					padding: 0
+					margin: 10px 0 0 10px
+					border: 0
+
+					.post-actions
+						margin: 0 0 0 40px
+
+					&:last-child .post-actions
+						margin-bottom: -18px
 
 			.add-comment-button
 				float: right
