--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -85,7 +85,7 @@
 				input[type="checkbox"]
 					margin: 2px 0 0 10px
 
-				input[type="text"]
+				input[type="text"], input[type="email"]
 					width: 130px
 					height: 22px
 					padding: 0 3px
