CSS update for table

--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -159,7 +159,7 @@
 
             .eze-filters
                 margin-top: 10px
-                border: 1px solid #eee
+                border: 1px solid #E4E3E3
                 width: 178px
                 padding: 10px
                 background: #fff
