--- a/css/eze.css
+++ b/css/eze.css
@@ -133,7 +133,7 @@
     margin-top: -37px; }
     .eze .eze-table .eze-filters-wrap .eze-filters {
       margin-top: 10px;
-      border: 1px solid #eeeeee;
+      border: 1px solid #e4e3e3;
       width: 178px;
       padding: 10px;
       background: white; }
