--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -85,19 +85,19 @@
 				input[type="checkbox"]
 					margin: 2px 0 0 10px
 
-				input[type="text"], input[type="email"]
+				input[type="text"], input[type="email"], input[type="time"], input[type="date"], input[type="datetime"]
 					width: 130px
 					height: 22px
 					padding: 0 3px
 					margin: -1px 5px 0 5px
 					line-height: 22px
 
-				.activate-time, .activate-date
-					text-align: center
+				input.activate-time, input.activate-date
+					text-align: right
 					width: 35px
 
-				.activate-date
-					width: 75px
+				input.activate-date
+					width: 90px
 
 				.right-align
 					position: absolute
