--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -16,11 +16,10 @@
 
             .batch .btn
                 float: left
-                margin-right: 5px
 
-            input
+            .check-all
                 float: left
-                margin: 9px 5px 0 0
+                margin: 9px 5px 0 5px
 
             .sort-by
                 float: right
@@ -29,8 +28,9 @@
                 h2
                     float: left
                     font: bold 12px/12px "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
-                    margin: 7px 10px 0 0
+                    margin: 8px 10px 0 0
                     display: inline
+                    color: #555
 
                 .btn-group
                     float: left
@@ -99,17 +99,18 @@
 
                         .check
                             float: left
+                            display: inline-block
                             width: 19px
                             height: 19px
                             padding: 0
-                            margin: 0 -19px 0 0
+                            margin: -0 -19px 0 0
                             position: relative
                             z-index: 1
                             -webkit-transform: translateZ(0)
                             background: #fff
 
                             input
-                                margin: 0 0 0 3px
+                                margin: -1px 0 0 3px
 
                         .thumb
                             margin: 0 10px 0 0
