--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -151,6 +151,9 @@
 	input, textarea, select
 		height: auto
 
+	label input, label textarea, label select
+		display: auto
+
 	li
 		line-height: normal
 		position: static
