--- a/css/eze.css
+++ b/css/eze.css
@@ -1347,6 +1347,13 @@
 .eze .eze-layout .eze-items .wrap .title {
   width: 40%; }
 
+.eze .block-settings input[type="number"] {
+  width: 30px;
+  margin: 0;
+  text-align: right; }
+.eze .block-settings select {
+  width: 80px; }
+
 .eze {
   margin: 0;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
