--- a/css/sass/layout.sass
+++ b/css/sass/layout.sass
@@ -26,3 +26,13 @@
 	.eze-items
 		.wrap .title
 			width: 40%
+
+.eze
+	.block-settings
+		input[type="number"]
+			width: 30px
+			margin: 0
+			text-align: right
+
+		select
+			width: 80px
