--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -16,6 +16,7 @@
 
             .batch .btn
                 float: left
+                margin-right: 5px
 
             .check-all
                 float: left
@@ -103,14 +104,14 @@
                             width: 19px
                             height: 19px
                             padding: 0
-                            margin: -0 -19px 0 0
+                            margin: 0 -19px 0 0
                             position: relative
                             z-index: 1
                             -webkit-transform: translateZ(0)
                             background: #fff
 
                             input
-                                margin: -1px 0 0 3px
+                                margin: -2px 0 0 3px
 
                         .thumb
                             margin: 0 10px 0 0
