CSS update for body and added lists inside user popover

--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -217,7 +217,11 @@
 		width: 605px
 
 	.eze-dashboard-modal
-		width: 580px
+		width: 605px
 
-		form
-			margin: 0
+		h2
+			img
+				margin: -2px 5px 0 0
+
+		.eze-items
+			margin: 0 0 20px 0
