--- a/css/eze.css
+++ b/css/eze.css
@@ -352,9 +352,11 @@
 .eze .eze-add-content-modal {
   width: 605px; }
 .eze .eze-dashboard-modal {
-  width: 580px; }
-  .eze .eze-dashboard-modal form {
-    margin: 0; }
+  width: 605px; }
+  .eze .eze-dashboard-modal h2 img {
+    margin: -2px 5px 0 0; }
+  .eze .eze-dashboard-modal .eze-items {
+    margin: 0 0 20px 0; }
 
 .eze .eze-bigmodal {
   position: absolute;
@@ -881,9 +883,9 @@
   overflow-x: hidden;
   overflow-y: auto;
   padding: 0 10px;
-  border-radius: 4px; }
+  border-radius: 4px;
+  box-shadow: inset 0px 0px 10px rgba(0, 0, 0, 0.2); }
   .eze .eze-comments li {
-    border-top: 1px solid white;
     border-bottom: 1px solid #dcdcdc;
     padding: 6px 15px;
     margin: 0 -15px; }
@@ -1490,6 +1492,9 @@
     line-height: 20px; }
   .eze .comment {
     min-height: 10px; }
+
+body {
+  margin-left: 63px; }
 
 .eze {
   text-rendering: optimizeLegibility;
