--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -182,9 +182,9 @@
 		overflow-y: auto
 		padding: 0 10px
 		border-radius: 4px
+		box-shadow: inset 0px 0px 10px rgba(0,0,0,0.2)
 
 		li
-			border-top: 1px solid #fff
 			border-bottom: 1px solid #dcdcdc
 			padding: 6px 15px
 			margin: 0 -15px
