--- a/css/eze.css
+++ b/css/eze.css
@@ -254,7 +254,7 @@
     display: block;
     width: 62px;
     height: 28px;
-    margin: 0 0 2px 0; }
+    margin: 0 0 5px 0; }
     @media only screen and (-webkit-min-device-pixel-ratio: 1.5) {
       .eze #eze-toolbar b {
         background: url(../images/sprite@2x.png);
@@ -408,11 +408,40 @@
         .eze .stack-item header h1 .iconwrap .large {
           margin-top: 8px;
           display: none; }
-    .eze .stack-item header .btn {
-      float: right;
+    .eze .stack-item header button {
       display: none; }
-      .eze .stack-item header .btn.btn-mini {
-        margin: 3px 9px 0 0; }
+    .eze .stack-item header .close-all, .eze .stack-item header .go-back {
+      float: right;
+      padding: 0 15px;
+      border: 0;
+      border-left: 1px solid rgba(255, 255, 255, 0.5); }
+    .eze .stack-item header .close-all {
+      height: 30px;
+      color: #bd5900;
+      background-color: #ffe2b6;
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#ffe2b6), to(#ffc368));
+      background-image: -webkit-linear-gradient(top, #ffe2b6, #ffc368);
+      background-image: -moz-linear-gradient(top, #ffe2b6, #ffc368);
+      background-image: -ms-linear-gradient(top, #ffe2b6, #ffc368);
+      background-image: -o-linear-gradient(top, #ffe2b6, #ffc368);
+      background-image: linear-gradient(top, #ffe2b6, #ffc368);
+      box-shadow: -1px 0 0 0 #ffb647;
+      font-size: 11px; }
+      .eze .stack-item header .close-all span {
+        font-size: 16px;
+        display: none; }
+    .eze .stack-item header .go-back {
+      background-color: #ffd185;
+      background-image: -webkit-gradient(linear, left top, left bottom, from(#ffd185), to(#ff8602));
+      background-image: -webkit-linear-gradient(top, #ffd185, #ff8602);
+      background-image: -moz-linear-gradient(top, #ffd185, #ff8602);
+      background-image: -ms-linear-gradient(top, #ffd185, #ff8602);
+      background-image: -o-linear-gradient(top, #ffd185, #ff8602);
+      background-image: linear-gradient(top, #ffd185, #ff8602);
+      height: 44px;
+      color: #4c3312;
+      font-size: 12px;
+      padding: 0 20px; }
   .eze .stack-item:nth-last-child(2) header {
     background-color: #ffc785;
     background-image: -webkit-gradient(linear, left top, left bottom, from(#ffc785), to(#ffb365));
@@ -420,24 +449,25 @@
     background-image: -moz-linear-gradient(top, #ffc785, #ffb365);
     background-image: -ms-linear-gradient(top, #ffc785, #ffb365);
     background-image: -o-linear-gradient(top, #ffc785, #ffb365);
-    background-image: linear-gradient(top, #ffc785, #ffb365); }
+    background-image: linear-gradient(top, #ffc785, #ffb365);
+    background: #ffad33; }
   .eze .stack-item:nth-last-child(3) header {
-    background: #ffd5a1; }
-  .eze .stack-item.first header .btn, .eze .stack-item.last header .btn {
+    background: #ffc266; }
+  .eze .stack-item.first header button, .eze .stack-item.last header button {
     display: block; }
   .eze .stack-item.last header {
     height: 44px;
     right: 44px;
     max-width: 1100px;
-    background-color: #ff9b00;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#ff9b00), to(#ff8500));
-    background-image: -webkit-linear-gradient(top, #ff9b00, #ff8500);
-    background-image: -moz-linear-gradient(top, #ff9b00, #ff8500);
-    background-image: -ms-linear-gradient(top, #ff9b00, #ff8500);
-    background-image: -o-linear-gradient(top, #ff9b00, #ff8500);
-    background-image: linear-gradient(top, #ff9b00, #ff8500);
+    background-color: #ff9f00;
+    background-image: -webkit-gradient(linear, left top, left bottom, from(#ff9f00), to(#ff8500));
+    background-image: -webkit-linear-gradient(top, #ff9f00, #ff8500);
+    background-image: -moz-linear-gradient(top, #ff9f00, #ff8500);
+    background-image: -ms-linear-gradient(top, #ff9f00, #ff8500);
+    background-image: -o-linear-gradient(top, #ff9f00, #ff8500);
+    background-image: linear-gradient(top, #ff9f00, #ff8500);
     border-bottom: 0;
-    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.4); }
+    box-shadow: 0 2px 2px 0 rgba(198, 93, 0, 0.6), inset 0 -1px 0 0 rgba(255, 255, 255, 0.4); }
     .eze .stack-item.last header h1 {
       font: normal 16px/44px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif; }
       .eze .stack-item.last header h1 .iconwrap {
@@ -454,7 +484,10 @@
     -webkit-animation: stack-header-move-out 0.2s ease 1 normal; }
   .eze .stack-item .eze-autosave {
     float: right;
-    margin: 9px 9px 0 0; }
+    height: 44px; }
+    .eze .stack-item .eze-autosave p {
+      line-height: 44px;
+      margin: 0 20px; }
   .eze .stack-item .eze-stack-content {
     display: none;
     padding: 15px;
