--- a/css/sass/stack.sass
+++ b/css/sass/stack.sass
@@ -39,29 +39,50 @@
 						margin-top: 8px
 						display: none
 
-			.btn
-				float: right
+			button
 				display: none
 
-				&.btn-mini
-					margin: 3px 9px 0 0
+			.close-all, .go-back
+				float: right
+				padding: 0 15px
+				border: 0
+				border-left: 1px solid rgba(255,255,255,0.5)
+
+			.close-all
+				height: 30px
+				color: #bd5900
+				@include gradient(#ffe2b6, #ffc368)
+				box-shadow: -1px 0 0 0 #ffb647
+				font-size: 11px
+
+				span
+					font-size: 16px
+					display: none
+
+			.go-back
+				@include gradient(#ffd185, #ff8602)
+				height: 44px
+				color: #4c3312
+				font-size: 12px
+				padding: 0 20px
 
 		&:nth-last-child(2) header
 			@include gradient(#ffc785, #ffb365)
+			background: #ffad33
 
 		&:nth-last-child(3) header
-			background: #ffd5a1
+			background: #ffc266
 
-		&.first header .btn, &.last header .btn
+		&.first header button, &.last header button
 			display: block
 
 		&.last header
 			height: 44px
 			right: 44px
 			max-width: 1100px
-			@include gradient(#ff9b00, #ff8500)
+			@include gradient(#ff9f00, #ff8500)
 			border-bottom: 0
-			box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.4)
+			box-shadow: 0 2px 2px 0 rgba(198, 93, 0, 0.6), inset 0 -1px 0 0 rgba(255,255,255,0.4)
 
 			h1
 				font: normal 16px/44px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
@@ -84,7 +105,11 @@
 
 		.eze-autosave
 			float: right
-			margin: 9px 9px 0 0
+			height: 44px
+
+			p
+				line-height: 44px
+				margin: 0 20px
 
 		// Stack content
 
