Added carret to create button in datatable, removed size attr from write message input field above the activity streams, and minor css updates

--- a/css/sass/toolbar.sass
+++ b/css/sass/toolbar.sass
@@ -173,6 +173,7 @@
 	// Custom styles for different modals
 
 	.eze-activity-modal 
+		width: 420px
 		.btn-group
 			margin: 0 0 10px 0
 
@@ -206,6 +207,7 @@
 				white-space: nowrap
 
 	.eze-publish-modal
+		width: 420px
 		.publish-info
 			font-size: 11px
 			margin: -5px 0 5px 0
