--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -25,6 +25,9 @@
 		-moz-animation: fade-in 0.5s ease 1 normal
 		-webkit-animation: fade-in 0.5s ease 1 normal
 
+	.popover.right .arrow
+		border-right-color: #fafafa
+
 
 	.nav-pills.inverted
 		li
