--- a/css/eze.css
+++ b/css/eze.css
@@ -101,13 +101,21 @@
           width: 110px;
           height: 90px;
           float: left;
-          background: #eeeeee; }
+          border-right: 1px solid white;
+          background-color: #ffecd5;
+          background-image: -webkit-gradient(linear, left top, left bottom, from(#ffecd5), to(#ffdab2));
+          background-image: -webkit-linear-gradient(top, #ffecd5, #ffdab2);
+          background-image: -moz-linear-gradient(top, #ffecd5, #ffdab2);
+          background-image: -ms-linear-gradient(top, #ffecd5, #ffdab2);
+          background-image: -o-linear-gradient(top, #ffecd5, #ffdab2);
+          background-image: linear-gradient(top, #ffecd5, #ffdab2); }
           .eze .eze-table .eze-table-content ul li.item .thumb img {
             float: left;
             height: 90px; }
             .eze .eze-table .eze-table-content ul li.item .thumb img.class-icon {
-              margin: 30px 0 0 39px;
-              height: auto; }
+              margin: 21px 0 0 31px;
+              height: auto;
+              opacity: 0.8; }
         .eze .eze-table .eze-table-content ul li.item h2 {
           font: normal 18px/18px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif;
           margin: 10px 0 8px 0;
@@ -133,6 +141,8 @@
     position: absolute;
     width: 200px;
     margin-top: -37px; }
+    .eze .eze-table .eze-filters-wrap .input-prepend input {
+      width: 100%; }
     .eze .eze-table .eze-filters-wrap .eze-filters {
       margin-top: 10px;
       border: 1px solid #e4e3e3;
@@ -142,8 +152,6 @@
       .eze .eze-table .eze-filters-wrap .eze-filters .description {
         font-size: 11px;
         margin: 0 0 0 2px; }
-      .eze .eze-table .eze-filters-wrap .eze-filters input[type="text"] {
-        width: 145px; }
       .eze .eze-table .eze-filters-wrap .eze-filters select {
         width: 180px; }
       .eze .eze-table .eze-filters-wrap .eze-filters form {
@@ -320,13 +328,15 @@
     position: absolute;
     top: 6px;
     right: 0; }
-.eze .eze-activity-modal .btn-group {
-  margin: 0 0 10px 0; }
-.eze .eze-activity-modal .show-more {
-  margin: 10px 0 0 0; }
-.eze .eze-activity-modal .eze-comments {
-  background: white;
-  border: 1px solid #cccccc; }
+.eze .eze-activity-modal {
+  width: 420px; }
+  .eze .eze-activity-modal .btn-group {
+    margin: 0 0 10px 0; }
+  .eze .eze-activity-modal .show-more {
+    margin: 10px 0 0 0; }
+  .eze .eze-activity-modal .eze-comments {
+    background: white;
+    border: 1px solid #cccccc; }
 .eze .eze-devices-modal {
   width: 420px; }
   .eze .eze-devices-modal .table {
@@ -344,11 +354,13 @@
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap; }
-.eze .eze-publish-modal .publish-info {
-  font-size: 11px;
-  margin: -5px 0 5px 0; }
-.eze .eze-publish-modal label.checkbox {
-  margin: 0 0 5px 2px; }
+.eze .eze-publish-modal {
+  width: 420px; }
+  .eze .eze-publish-modal .publish-info {
+    font-size: 11px;
+    margin: -5px 0 5px 0; }
+  .eze .eze-publish-modal label.checkbox {
+    margin: 0 0 5px 2px; }
 .eze .eze-add-content-modal {
   width: 605px; }
 .eze .eze-dashboard-modal {
@@ -909,6 +921,9 @@
       margin: -4px 4px 0 0; }
     .eze .eze-content-types li:hover {
       background: white; }
+.eze input[type="text"].write-post {
+  width: 70%;
+  margin-bottom: 5px; }
 .eze .eze-comments {
   list-style: none;
   margin: 0 0 10px 0;
@@ -924,6 +939,8 @@
     margin: 0 -15px; }
     .eze .eze-comments li:first-child {
       border-top: 0; }
+    .eze .eze-comments li:nth-child(2n) {
+      background: rgba(200, 200, 200, 0.1); }
     .eze .eze-comments li .user-image {
       height: 34px;
       width: 34px;
@@ -947,7 +964,8 @@
       .eze .eze-comments li .eze-replies li {
         padding: 0;
         margin: 10px 0 0 10px;
-        border: 0; }
+        border: 0;
+        background: none; }
         .eze .eze-comments li .eze-replies li .post-actions {
           margin: 0 0 0 40px; }
         .eze .eze-comments li .eze-replies li:last-child .post-actions {
@@ -1212,7 +1230,7 @@
     width: 100%;
     border-top: 1px solid #eeeeee; }
   .eze .eze-object-attributes .eze-object-attribute {
-    width: 49%;
+    width: 50%;
     float: left;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -1220,7 +1238,9 @@
     border-left: 1px solid #eeeeee; }
     .eze .eze-object-attributes .eze-object-attribute .label-required {
       float: right;
-      margin: -10px; }
+      margin: -15px;
+      border-radius: 0;
+      background: #eeeeee; }
     .eze .eze-object-attributes .eze-object-attribute.full-width {
       border-top: 1px solid #eeeeee;
       width: 100%; }
@@ -1250,7 +1270,7 @@
   .eze .eze-object-attributes .eze-select select {
     width: 100%; }
   .eze .eze-object-attributes .eze-date .input-append {
-    margin-right: 10px; }
+    margin-right: 26px; }
   .eze .eze-object-attributes .eze-date .icon-calendar {
     font-size: 16px;
     vertical-align: 0; }
@@ -1289,12 +1309,15 @@
       height: auto;
       width: 100%; }
   .eze .eze-object-attributes .eze-image .tags .label, .eze .eze-object-attributes .eze-dam .tags .label {
-    padding: 4px;
+    padding: 2px 6px;
     font-size: 11px;
     display: block;
     float: left;
-    margin: 0 5px 5px 0; }
+    margin: 0 5px 5px 0;
+    background: #666666; }
   .eze .eze-object-attributes .eze-image .tags .close, .eze .eze-object-attributes .eze-dam .tags .close {
+    font-weight: 100;
+    font-size: 14px;
     float: none;
     opacity: 1;
     filter: alpha(opacity=100);
@@ -1405,6 +1428,8 @@
   .eze .tab-content .tab-pane {
     -moz-animation: fade-in 0.5s ease 1 normal;
     -webkit-animation: fade-in 0.5s ease 1 normal; }
+  .eze .popover.right .arrow {
+    border-right-color: #fafafa; }
   .eze .nav-pills.inverted li a {
     background: transparent;
     border: 1px solid #cccccc;
