--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -174,6 +174,10 @@
 	// List of comments, with avatars and actions
 	// -----------------------------------------------
 
+	input[type="text"].write-post
+		width: 70%
+		margin-bottom: 5px
+
 	.eze-comments
 		list-style: none
 		margin: 0 0 10px 0
@@ -191,6 +195,9 @@
 
 			&:first-child
 				border-top: 0
+
+			&:nth-child(2n)
+				background: rgba(200,200,200,0.1)
 
 			.user-image
 				height: 34px
@@ -221,6 +228,7 @@
 					padding: 0
 					margin: 10px 0 0 10px
 					border: 0
+					background: none
 
 					.post-actions
 						margin: 0 0 0 40px
