--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -65,7 +65,7 @@
 			border-top: 1px solid #eee
 
 		.eze-object-attribute // One attribute
-			width: 49%
+			width: 50%
 			float: left
 			-moz-box-sizing: border-box
 			box-sizing: border-box
@@ -74,7 +74,9 @@
 
 			.label-required
 				float: right
-				margin: -10px
+				margin: -15px
+				border-radius: 0
+				background: #eee
 
 			&.full-width
 				border-top: 1px solid #eee
@@ -123,7 +125,7 @@
 
 		.eze-date
 			.input-append
-				margin-right: 10px
+				margin-right: 26px
 
 			.icon-calendar
 				font-size: 16px
@@ -172,13 +174,16 @@
 
 			.tags
 				.label
-					padding: 4px
+					padding: 2px 6px
 					font-size: 11px
 					display: block
 					float: left
 					margin: 0 5px 5px 0
+					background: #666
 
 				.close
+					font-weight: 100
+					font-size: 14px
 					float: none
 					opacity: 1
 					filter: alpha(opacity=100)
