--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -118,15 +118,17 @@
                             width: 110px
                             height: 90px
                             float: left
-                            background: #eee
+                            border-right: 1px solid #fff
+                            @include gradient(#ffecd5, #ffdab2)
 
                             img
                                 float: left
                                 height: 90px
 
                                 &.class-icon
-                                    margin: 30px 0 0 39px
+                                    margin: 21px 0 0 31px
                                     height: auto
+                                    opacity: 0.8
 
                         h2
                             font: normal 18px/18px "Helvetica Neue Light", "HelveticaNeue-Light", "Helvetica Neue", "HelveticaNeue", Helvetica, Arial, sans-serif
@@ -159,6 +161,9 @@
             width: 200px
             margin-top: -37px
 
+            .input-prepend input
+                width: 100%
+
             .eze-filters
                 margin-top: 10px
                 border: 1px solid #E4E3E3
@@ -169,9 +174,6 @@
                 .description
                     font-size: 11px
                     margin: 0 0 0 2px
-
-                input[type="text"]
-                    width: 145px
 
                 select
                     width: 180px
