--- a/css/sass/pencils.sass
+++ b/css/sass/pencils.sass
@@ -49,7 +49,7 @@
 		overflow: hidden
 		border-radius: 4px
 		margin: 0
-		background: url('../images/legacy-sprite.png') -572px 0 no-repeat
+		background: url('../images/legacy-sprite.png') -570px -40px no-repeat
 
 		li
 			display: none
@@ -66,10 +66,10 @@
 				border-bottom-right-radius: 4px
 			
 			a
-				font: normal 12px/18px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
+				font: normal 12px/24px HelveticaNeue, "Helvetica Neue", Helvetica, Arial, sans-serif
 				background: #222
 				border-bottom: 1px solid #333
-				color: rgba(255,162,0,1)
+				color: #ff9c00
 				text-decoration: none
 				display: block
 				padding: 3px 15px 3px 6px
