--- a/css/sass/interface-elements.sass
+++ b/css/sass/interface-elements.sass
@@ -119,6 +119,13 @@
 						margin: -1px 0 0 0
 						border-radius: 0
 						border-left: 1px solid #d0d0d0
+
+						&:hover
+							background: #fff
+
+					.btn:last-child
+						border-top-right-radius: 4px
+						border-bottom-right-radius: 4px
 			
 			select, .chzn-container
 				width: 110px
