--- a/css/eze.css
+++ b/css/eze.css
@@ -1559,6 +1559,9 @@
 body {
   margin-left: 63px; }
 
+#ezieMainContainer {
+  z-index: 80000; }
+
 .eze {
   text-rendering: optimizeLegibility;
   -webkit-text-size-adjust: none; }
