--- a/css/sass/eze.sass
+++ b/css/sass/eze.sass
@@ -17,6 +17,9 @@
 body
 	margin-left: 63px
 
+#ezieMainContainer
+	z-index: 80000
+
 .eze
 	text-rendering: optimizeLegibility
 	-webkit-text-size-adjust: none
