Important set on zindex for ezie

--- a/css/sass/eze.sass
+++ b/css/sass/eze.sass
@@ -18,7 +18,7 @@ body
 	margin-left: 63px
 
 #ezieMainContainer
-	z-index: 80000
+	z-index: 80000!important
 
 .eze
 	text-rendering: optimizeLegibility
