--- a/css/eze.css
+++ b/css/eze.css
@@ -1560,7 +1560,7 @@ body {
   margin-left: 63px; }
 
 #ezieMainContainer {
-  z-index: 80000; }
+  z-index: 80000 !important; }
 
 .eze {
   text-rendering: optimizeLegibility;
