--- a/css/sass/object-edit.sass
+++ b/css/sass/object-edit.sass
@@ -113,13 +113,13 @@
 
 		// All attributes ——————————————————————————
 		
-		.eze-string, .eze-date
+		.ezstring, .eze-date
 			input
 				box-sizing: border-box
 				height: auto
 				width: 100%
 
-		.eze-select
+		.ezselection
 			select
 				width: 100%
 
@@ -131,7 +131,7 @@
 				font-size: 16px
 				vertical-align: 0
 
-		.eze-image, .eze-dam
+		.ezimage, .keymedia
 
 			.btn
 				margin: 0 5px 5px 0
