--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -60,6 +60,9 @@
 		padding: 3px 10px 2px 10px
 		border: 1px solid #bbb
 
+	.input-append .btn
+		border-radius: 0 3px 3px 0
+
 	.remove-btn
 		padding: 3px 8px
 
