--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -120,10 +120,13 @@
                             float: left
                             border-right: 1px solid #fff
                             @include gradient(#ffecd5, #ffdab2)
+                            overflow: hidden
 
                             img
                                 float: left
                                 height: 90px
+                                max-height: none
+                                max-width: none
 
                                 &.class-icon
                                     margin: 21px 0 0 31px
