--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -94,6 +94,7 @@
                         border-bottom: 1px solid #fff
                         padding: 0 0 0 0
                         margin: 0 1px
+                        position: relative
 
                         &:nth-child(2n), &:nth-child(2n) .check
                             background: #fafafa
@@ -146,6 +147,11 @@
 
                             .other-locations
                                 border-bottom: 1px dashed #000
+
+                        .actions
+                            position: absolute
+                            top: 35px
+                            right: 35px
 
                     &.publishing
                         -moz-animation: table-publish 0.3s ease 1 normal
