--- a/css/sass/table.sass
+++ b/css/sass/table.sass
@@ -16,7 +16,7 @@
 
             .batch .btn
                 float: left
-                margin-right: 5px
+                margin: 0 5px 10px 0
 
             .check-all
                 float: left
@@ -24,7 +24,8 @@
 
             .sort-by
                 float: right
-                margin-right: 0
+                position: relative
+                z-index: 1
 
                 h2
                     float: left
