--- a/css/sass/finder.sass
+++ b/css/sass/finder.sass
@@ -107,6 +107,10 @@
 					.has-children-arrow
 						opacity: 1
 						background-color: #ffa500
+
+				&.hidden-object
+					opacity: 0.5
+					filter: alpha(opacity=50)
 				
 				&.dragged
 					z-index: 999
