Changed bigmodal from absolute to fixed

--- a/css/eze.css
+++ b/css/eze.css
@@ -380,7 +380,7 @@
     margin: 0 0 20px 0; }
 
 .eze .eze-bigmodal {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   right: 0;
