--- a/css/sass/visual-style.sass
+++ b/css/sass/visual-style.sass
@@ -28,6 +28,12 @@
 	.popover.right .arrow
 		border-right-color: #fafafa
 
+	.option-controller
+		label
+			margin: 0 5px 0 0
+		input
+			margin: 0 5px 0 0
+
 
 	.nav-pills.inverted
 		li
